syntax = "proto3";

option csharp_namespace = "TradeBot.Account.AccountService.v1";

package license;

// Сервис управления лицензиями.
service License {
	// Метод для сайта. Позволяет добавить лицензию в аккаунт при покупке продукта.
	rpc SetLicense (SetLicenseRequest) returns (SetLicenseResponse);
	// Метод для сервиса Account. Позволяет проверить, есть ли лицензия на продукт для данного аккаунта.
	rpc CheckLicense (CheckLicenseRequest) returns (CheckLicenseResponse);
}

// Запрос на установку лицензии.
message SetLicenseRequest {
	string session_id = 1;
	ProductCode product = 2;
}

// Ответ на запрос об установке лицензии.
message SetLicenseResponse {
	LicenseCode code = 1;
	string message = 2;
}

// Запрос на проверку лицензии.
message CheckLicenseRequest {
	string session_id = 1;
	ProductCode product = 2;
}

// Ответ на запрос о проверке лицензии.
message CheckLicenseResponse {
	LicenseCode code = 1;
	string message = 2;
	bool have_access = 3;
}

// Коды действий с лицензией.
enum LicenseCode {
	LICENSE_CODE_UNSPECIFIED = 0;
	LICENSE_CODE_SUCCESSFUL = 1;
	LICENSE_CODE_IS_EXISTS = 2;
	LICENSE_CODE_HAVE_ACCESS = 3;
	LICENSE_CODE_NO_ACCESS = 4;
}

// Коды продуктов для лицензий.
enum ProductCode {
	PRODUCT_CODE_UNSPECIFIED = 0;
	PRODUCT_CODE_TRADEBOT = 1;
}